# dispatch

./: .env.example  .gitignore  Cargo.toml  Dockerfile  HEALTH_TESTING_GUIDE.md  MANUAL_TESTS.md  MORETODO.md  MT_NOTES.md  Makefile  NEWFEAT.md  README.md  USAGE.md  docker-compose.yml  fingerprint.txt
.github/workflows/: release-cli.yml  test-backend.yml
crates/dispatch-cli/: Cargo.toml
crates/dispatch-cli/src/: api.rs  config.rs  main.rs
crates/dispatch-cli/src/commands/: init.rs  login.rs  mod.rs  publish.rs
examples/: feature-flags.postman_collection.json  ota-deploy.yml
migrations/: 001_initial.sql  002_channels_rollout.sql  003_builds.sql  004_audit_webhooks.sql  005_groups_analytics_rollback.sql  006_api_keys.sql  007_branches_channels.sql  008_audit_actor.sql  009_min_runtime_version.sql  010_webhook_deliveries.sql  011_asset_file_size.sql  012_projects.sql  013_project_uuid.sql  014_user_overrides.sql  015_feature_flags.sql  016_flag_name.sql  017_flag_environments.sql  018_flag_created_by.sql  019_flag_variations.sql  020_flag_evaluations.sql  021_flag_contexts.sql  022_project_roles.sql  023_segments.sql  024_rollout_policies.sql  025_rollout_executions.sql  026_flag_health.sql  027_telemetry_events.sql  028_health_events.sql  029_rollout_policy_flags.sql  030_rollout_thresholds.sql  031_flag_update_links.sql  032_policy_description.sql  033_daily_stats_counts.sql  034_execution_flags.sql  035_execution_flag_overrides.sql  036_execution_flag_targeting_rule.sql  037_health_event_details.sql  038_performance_samples.sql  039_aggregation_metadata.sql
src/: auth.rs  config.rs  errors.rs  execution_events.rs  flag_events.rs  lib.rs  main.rs  models.rs  multipart.rs  routes.rs  signing.rs
src/handlers/: analytics.rs  assets.rs  audit.rs  auth_handler.rs  branches.rs  builds.rs  contexts.rs  feature_flags.rs  flag_evaluator.rs  health_metrics.rs  manifest.rs  mod.rs  observe.rs  projects.rs  rollback.rs  rollout_evaluator.rs  rollout_executions.rs  rollout_policies.rs  segments.rs  settings.rs  telemetry.rs  upload.rs  user_overrides.rs  webhooks.rs
src/jobs/: aggregator.rs  mod.rs  retention.rs
tests/: aggregator_test.rs  auth_test.rs  builds_test.rs  feature_flags_test.rs  flag_eval_test.rs  health_metrics_test.rs  manifest_test.rs  retention_test.rs  rollout_test.rs  smoke_test.rs  telemetry_test.rs
tests/common/: auth.rs  fixtures.rs  mod.rs  setup.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
(+37 files in other folders)
