[package]
name = "dispatch-cli"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "dispatch"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "multipart",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
anyhow = "1"
dirs = "6"
sha2 = "0.10"
base64 = "0.22"
