[package]
name = "dispatch-cli"
version = "0.1.11"
edition = "2024"

[[bin]]
name = "dispatch"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls",
    "json",
    "multipart",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
dialoguer = "0.12"
indicatif = "0.18.4"
console = "0.16.2"
anyhow = "1"
dirs = "6"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
